# SimpleTD

./: CMakeLists.txt  README.md  TODO.md
.cache/clangd/index/: app.cpp.CEFCC5658C5B0E1A.idx  app.hpp.2B7F877D4554F4C0.idx  app_info.hpp.617E1D9FFE21810C.idx  draw_proc.cpp.C7BCB86329E93726.idx  draw_proc.hpp.15693F8D850D469E.idx  draw_proc_util.cpp.7B4FDA51174176B0.idx  draw_proc_util.hpp.613FBC8966A3D2A9.idx  end_scene.cpp.258460AE3F358122.idx  end_scene.hpp.7523D63BBEF2C470.idx  game.hpp.C58925F3A2C4C3CD.idx  game_color_pallette.hpp.C3FC3C3B891319BE.idx  game_scene.cpp.88DF90CA78276347.idx  game_scene.hpp.8B18981E08B95A80.idx  glad.c.048A92FF089244A0.idx  glad.c.0E09A836ED7C60D7.idx  glad.c.AC890E6F3A5FA210.idx  glad.h.3A8B1715696E23EC.idx  glad.h.448CD779832512EA.idx  input_handler.cpp.FFC4CCC633029B9B.idx  input_handler.hpp.71DBD93086180ED9.idx  khrplatform.h.769FB0F3C882BE7C.idx  khrplatform.h.C2A3D7C2B884DFCF.idx  main.cpp.2536FD476D230FB7.idx  (+14 more)
include/app/: app.hpp  app_info.hpp
include/engine/: draw_proc.hpp  draw_proc_util.hpp  input_handler.hpp  object_manager.hpp  scene.hpp  shader_utils.hpp  vector2d.hpp  window.hpp
include/game/: end_scene.hpp  game_color_pallette.hpp  game_scene.hpp  menu_scene.hpp  scene_type.hpp
include/glad/: glad.h
shaders/: shape_fshader.glsl  shape_vshader.glsl
src/: main.cpp
src/app/: app.cpp
src/engine/: draw_proc.cpp  draw_proc_util.cpp  input_handler.cpp  object_manager.cpp  scene.cpp  shader_utils.cpp  vector2d.cpp  window.cpp
src/game/: end_scene.cpp  game_scene.cpp  menu_scene.cpp
src/glad/: glad.c
